# TypoCompiler

./: .gitignore  Cargo.toml  README.md  plan.md  prompt.md  provider.toml.example
.github/workflows/: rust-cross-build.yml
src/: cli.rs  lib.rs  main.rs  provider.rs  render.rs  service.rs
tests/: test_chat.rs  test_provider.rs
