[package]
name = "typo_compiler"
version = "0.3.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.49", features = ["derive"] }
regex = "1.12.3"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread"] }
toml = "1.0.6"
